Fix to gap between loader points section

--- a/src/components/LoaderPoints/LoaderPoints.css
+++ b/src/components/LoaderPoints/LoaderPoints.css
@@ -8,7 +8,7 @@
 
 .loader-points-wrapper {
   max-width: 1200px;
-  margin: 0 auto 100px; /* Changed from fixed margins to auto for centering */
+  margin: 0 auto 0px; /* Changed from fixed margins to auto for centering */
   padding: 0 20px;
   box-sizing: border-box;
   width: 100%;
